--- a/5-Tools/index.html
+++ b/5-Tools/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.f88ab447a4e98053f94deb9917d1dc70.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.19f7a18b7f62e6b350db4220dafaab54.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -61,14 +61,14 @@ of emerging technologies that includes the terms &lsquo;crypto&rsquo;, &lsquo;<a
 blockchains, and &lsquo;web3&rsquo; may be opening the most exciting new pathways
 for distributing (instead of
 <a href=https://www.theguardian.com/commentisfree/2023/nov/27/openai-microsoft-big-tech-monopoly target=_blank rel=noopener>consolidating</a>)
-power toward more resilient home places, in the lineage of BBSs.</p><blockquote class="callout-collapsible callout-collapsed info-callout"><p>A Note on Terms</p><p>In the discussion of these technologies, I&rsquo;ll try to use plain (<a href="https://bank.dev/vox#:~:text=By%20inventing%20new,without%20any%20connotations." target=_blank rel="noopener noreferrer">if uncommon</a>)
+power toward more resilient home places, in the lineage of BBSs.</p><blockquote class="callout-collapsible callout-collapsed info-callout"><p>A Note on Terms</p><p>In the discussion of these technologies, I&rsquo;ll try to use plain (<a href="https://web.archive.org/web/20240813162111/https://bank.dev/vox#:~:text=By%20inventing%20new,without%20any%20connotations." target=_blank rel="noopener noreferrer">if uncommon</a>)
 language instead of terms like &lsquo;crypto&rsquo;, not only for the sake of those
 who are unfamiliar with the language of &lsquo;<a href=https://www.coindesk.com/learn/getting-started-with-crypto-twitter/ target=_blank rel="noopener noreferrer">crypto twitter</a>&rsquo;
 but also because many in the field have been made
 <a href=https://milkyeggs.com/crypto/the-doomer-case-for-the-final-death-of-crypto/ target=_blank rel=noopener>cynics</a>
 by recent failures of its culture to produce worthwhile tools. Thinking
 in terms of &lsquo;community computing&rsquo; can help us
-<a href=https://jzhao.xyz/posts/communal-computing/ target=_blank rel=noopener>lift our collective
+<a href=https://jzhao.xyz/posts/agentic-computing target=_blank rel=noopener>lift our collective
 gaze</a> to what
 is possible with these technologies beyond the
 <a href=https://www.bloomberg.com/features/2022-the-crypto-story-FTX-collapse-matt-levine target=_blank rel=noopener>many
@@ -155,7 +155,7 @@ Rosenthal</a>
 (among others). I encourage you to dig into what they have to say if you
 have any interest.</p><a href=#physical-changes-by-digital-means><h3 id=physical-changes-by-digital-means><span class=hanchor arialabel=Anchor></span>Physical Changes by Digital Means</h3></a><p>Of course, it&rsquo;s not just culture and institutions that are changed by
 new tools. From the
-<a href="https://en.wikipedia.org/wiki/History_of_the_city#cite_note-1:~:text=The-Neolithic-revolution-brought-agriculture%2C-which-made-denser-human-populations-possible%2C-thereby-supporting-city-development." target=_blank rel=noopener>birth of
+<a href=https://en.wikipedia.org/wiki/History_of_cities#Origins target=_blank rel=noopener>birth of
 agriculture</a>
 to the
 <a href=https://en.wikipedia.org/wiki/History_of_the_city#Industrial_revolution target=_blank rel=noopener>industrial
