--- a/2-Agency/index.html
+++ b/2-Agency/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.2672e667133246168fd55855719f6791.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.e8139c07bef31b5736c0b82a2013d8a2.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -34,7 +34,7 @@ other</a>)
 is unsustainably low. Our society doesn&rsquo;t feel particularly stable, nor
 are our externalities well-accounted for. And so, in recent decades, we
 have reason to doubt the proposition that
-<a href=https://www.culturechange.org/issue8/predict-and-provide.htm target=_blank rel=noopener>predict-and-provide</a>
+<a href=https://web.archive.org/web/20231207074709/https://www.culturechange.org/issue8/predict-and-provide.htm target=_blank rel=noopener>predict-and-provide</a>
 modes of planning can stabilize and provision livable places.</p><p>For large-scale organizational structures to produce a sense of
 <a href=https://link.springer.com/article/10.1007/s11109-015-9322-8 target=_blank rel=noopener>shared
 societal
@@ -283,7 +283,7 @@ dilemma often
 <a href="https://www.pnas.org/doi/10.1073/pnas.1619877114#:~:text=Hardin%E2%80%99s-solution-was-to-cede-our-freedoms-to-the-state%2C-to-be-bound-by-%E2%80%9Cmutual-coercion-mutually-agreed-upon%E2%80%9D" target=_blank rel=noopener>as
 justification</a>
 for formalized institutional intervention into resource management. It
-<a href="https://en.wikipedia.org/wiki/Tragedy_of_the_commons#:~:text=a-situation-in,resources.%5B3%5D" target=_blank rel=noopener>states</a>
+<a href="https://en.wikipedia.org/wiki/Tragedy_of_the_commons#:~:text=Hardin-also-pointed-out-the-problem-of-individuals-acting-in-rational-self%2Dinterest-by-claiming-that-if-all-members-in-a-group-used-common-resources-for-their-own-gain-and-with-no-regard-for-others%2C-all-resources-would-still-eventually-be-depleted." target=_blank rel=noopener>states</a>
 that without externally imposed rules, &lsquo;<a href=https://www.jstor.org/stable/2585925 target=_blank rel="noopener noreferrer">rational</a>&rsquo;
 individual users will overuse resources, depleting long-term and
 community-wide viability contrary to the common good of all users. This
