--- a/5-Tools/index.html
+++ b/5-Tools/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.c9e02ccc0e9e0b79f9133180dc7792e3.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.6b19ab325b90c8f850ff3bd87b02efa3.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -212,11 +212,11 @@ Bartlett</a></p></blockquote><p>Despite the promise of being more effective and 
 crucial that
 <a href=https://jzhao.xyz/posts/agentic-computing/ target=_blank rel=noopener>new tools</a> for the
 coordination of self sovereign communities be
-<a href=https://venkatesh-rao.gitbook.io/summer-of-protocols/#_ozkudrau5sjb target=_blank rel=noopener>sufficiently
+<a href=https://summerofprotocols.com/the-unreasonable-sufficiency-of-protocols-web target=_blank rel=noopener>sufficiently
 learnable</a>
 by a broad enough demographic, otherwise they risk becoming
 infrastructure for the same kind of
-<a href=https://web.archive.org/web/20230610080459/https://www.coindesk.com/layer2/2022/05/05/the-defi-mullet// target=_blank rel=noopener>intermediaries</a>
+<a href=https://cointelegraph.com/news/fintech-needs-de-fi-in-the-back target=_blank rel=noopener>intermediaries</a>
 we rely on today to coordinate our economies. If made accessible,
 community computers and other collaborative technologies can mature
 knowledge sharing aspirations present in organizations like
